adding theme to collection attempt

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -3,4 +3,6 @@ theme: jekyll-theme-minimal
 collections:
     doc:
         output: true
-        permalink: /:path/  
+        permalink: /:path/
+    values:
+      layout: jekyll-theme-minimal
