--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,6 @@
 theme: jekyll-theme-minimal
 logo: /assets/images/ethernet-network-cables-clip-art-rj45.png
+show_downloads: true
 
 collections:
     doc:
