--- a/.travis.yml
+++ b/.travis.yml
@@ -75,3 +75,4 @@ script:
 - make -j3
 - cmake .. -DCMAKE_C_COMPILER=$CC -DCMAKE_CXX_COMPILER=$CXX -DCMAKE_BUILD_TYPE=Debug
 - make -j3
+- ./Simple-Socket-tester.run
