separating tester from examples

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,29 +5,11 @@ project(Simple-Socket)
 set(CMAKE_DISABLE_IN_SOURCE_BUILD ON)
 set(CMAKE_DISABLE_SOURCE_CHANGES  ON)
 
-if ("${CMAKE_SOURCE_DIR}" STREQUAL "${CMAKE_BINARY_DIR}")
+if("${CMAKE_SOURCE_DIR}" STREQUAL "${CMAKE_BINARY_DIR}")
   message(SEND_ERROR "In-source builds are not allowed.")
-endif ()
+endif()
 
 #set(CMAKE_VERBOSE_MAKEFILE ON)
-
-# set up versioning.
-set(BUILD_MAJOR "2")
-set(BUILD_MINOR "0")
-set(BUILD_VERSION "0")
-set(BUILD_VERSION ${BUILD_MAJOR}.${BUILD_MINOR}.${BUILD_VERSION})
-
-# Setup source files
-include_directories(src)
-
-set(DATA_FILE README.md )
-FILE(GLOB SIMPLE_SOCKET_HEADERS "src/*.h")
-FILE(GLOB SIMPLE_SOCKET_SOURCES "src/*.cpp")
-SET_SOURCE_FILES_PROPERTIES( ${SIMPLE_SOCKET_HEADERS} PROPERTIES HEADER_FILE_ONLY TRUE ) # mark headers as headers...
-LIST(APPEND SIMPLE_SOCKET_SOURCES ${SIMPLE_SOCKET_HEADERS}) # append to sources so that dependency checks work on headers
-
-FILE(GLOB DNS_LIB "examples/dns/*")
-FILE(GLOB HTTP_LIB "examples/http/*")
 
 # OS and compiler checks.
 if(UNIX)
@@ -69,12 +51,31 @@ elseif(WIN32)
     endif()
 endif()
 
+# Setup versioning.
+set(BUILD_MAJOR "2")
+set(BUILD_MINOR "0")
+set(BUILD_VERSION "0")
+set(BUILD_VERSION ${BUILD_MAJOR}.${BUILD_MINOR}.${BUILD_VERSION})
+
+# Setup source files
+include_directories(src)
+
+set(DATA_FILE README.md )
+FILE(GLOB SIMPLE_SOCKET_HEADERS "src/*.h")
+FILE(GLOB SIMPLE_SOCKET_SOURCES "src/*.cpp")
+SET_SOURCE_FILES_PROPERTIES( ${SIMPLE_SOCKET_HEADERS} PROPERTIES HEADER_FILE_ONLY TRUE ) # mark headers as headers...
+LIST(APPEND SIMPLE_SOCKET_SOURCES ${SIMPLE_SOCKET_HEADERS}) # append to sources so that dependency checks work on headers
+
+FILE(GLOB DNS_SOURCE "examples/dns/*")
+FILE(GLOB HTTP_SOURCE "examples/http/*")
+
 # Project Options
 OPTION(SIMPLE_SOCKET_SHARED "Build Simple-Socket lib as shared." OFF)
 OPTION(SIMPLE_SOCKET_DEP_ONLY "Build for use inside other CMake projects as a dependency." OFF)
 OPTION(SIMPLE_SOCKET_EXAMPLES "Build the examples" ON)
+OPTION(SIMPLE_SOCKET_TEST "Build the tester" OFF)
 
-# make the lib and install into configured prefix
+# Build the lib and install into configured prefix
 if(SIMPLE_SOCKET_SHARED)
     if(SIMPLE_SOCKET_DEP_ONLY)
         ADD_LIBRARY(Simple-Socket SHARED ${SIMPLE_SOCKET_SOURCES} ${DATA_FILE})
@@ -118,15 +119,12 @@ if(NOT SIMPLE_SOCKET_DEP_ONLY AND SIMPLE_SOCKET_EXAMPLES)
         ADD_EXECUTABLE(multicast-example.run examples/Multicast.cpp)
         TARGET_LINK_LIBRARIES(multicast-example.run Simple-Socket pthread)
 
-        ADD_EXECUTABLE(dnsclient-example.run ${DNS_LIB})
+        ADD_EXECUTABLE(dnsclient-example.run ${DNS_SOURCE})
         TARGET_LINK_LIBRARIES(dnsclient-example.run Simple-Socket)
 
-        ADD_EXECUTABLE(httpclient-example.run examples/HttpClient.cpp ${HTTP_LIB})
+        ADD_EXECUTABLE(httpclient-example.run examples/HttpClient.cpp ${HTTP_SOURCE})
         target_include_directories(httpclient-example.run PRIVATE examples/http/)
         TARGET_LINK_LIBRARIES(httpclient-example.run Simple-Socket)
-
-        ADD_EXECUTABLE(Simple-Socket-tester.run tests/main.cpp)
-        TARGET_LINK_LIBRARIES(Simple-Socket-tester.run Simple-Socket pthread)
     elseif(WIN32)
         ADD_EXECUTABLE(asyncclient-example examples/RecvAsync.cpp)
         TARGET_LINK_LIBRARIES(asyncclient-example Simple-Socket)
@@ -143,13 +141,21 @@ if(NOT SIMPLE_SOCKET_DEP_ONLY AND SIMPLE_SOCKET_EXAMPLES)
         ADD_EXECUTABLE(multicast-example examples/Multicast.cpp)
         TARGET_LINK_LIBRARIES(multicast-example Simple-Socket)
 
-        ADD_EXECUTABLE(dnsclient-example ${DNS_LIB})
+        ADD_EXECUTABLE(dnsclient-example ${DNS_SOURCE})
         TARGET_LINK_LIBRARIES(dnsclient-example Simple-Socket)
 
-        ADD_EXECUTABLE(httpclient-example examples/HttpClient.cpp ${HTTP_LIB})
+        ADD_EXECUTABLE(httpclient-example examples/HttpClient.cpp ${HTTP_SOURCE})
         target_include_directories(httpclient-example PRIVATE examples/http/)
         TARGET_LINK_LIBRARIES(httpclient-example Simple-Socket)
+    endif()
+endif()
 
+# Tester
+if(NOT SIMPLE_SOCKET_DEP_ONLY AND SIMPLE_SOCKET_TEST)
+    if(UNIX)
+        ADD_EXECUTABLE(Simple-Socket-tester.run tests/main.cpp)
+        TARGET_LINK_LIBRARIES(Simple-Socket-tester.run Simple-Socket pthread)
+    elseif(WIN32)
         ADD_EXECUTABLE(Simple-Socket-tester tests/main.cpp)
         TARGET_LINK_LIBRARIES(Simple-Socket-tester Simple-Socket)
     endif()
