correcting cmake unable to find README

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,7 +60,7 @@ set(BUILD_VERSION ${BUILD_MAJOR}.${BUILD_MINOR}.${BUILD_VERSION})
 # Setup source files
 include_directories(src)
 
-set(DATA_FILE README.md )
+set(DATA_FILE docs/README.md )
 FILE(GLOB SIMPLE_SOCKET_HEADERS "src/*.h")
 FILE(GLOB SIMPLE_SOCKET_SOURCES "src/*.cpp")
 SET_SOURCE_FILES_PROPERTIES( ${SIMPLE_SOCKET_HEADERS} PROPERTIES HEADER_FILE_ONLY TRUE ) # mark headers as headers...
