--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ matrix:
           - llvm-toolchain-trusty-6.0
           packages:
           - clang-6.0
-          - libstdc++6
+          - libc6-dev
       env:
       - MATRIX_EVAL="CC=clang-6.0 && CXX=clang++-6.0"
       
@@ -23,7 +23,10 @@ matrix:
           - llvm-toolchain-trusty-7
           packages:
           - clang-7
-          - libstdc++-7-dev
+          - lldb-7
+          - lld-7
+          - libc++-7-dev
+          - libc++abi-7-dev
       env:
       - MATRIX_EVAL="CC=clang-7 && CXX=clang++-7"
         
