adding libc++6 to apt install

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,8 @@ matrix:
           - llvm-toolchain-trusty-6.0
           packages:
           - clang-6.0
-          - libc6-dev
+          - libc++1
+          - libc++abi-dev
       env:
       - MATRIX_EVAL="CC=clang-6.0 && CXX=clang++-6.0"
       
