swapping clang 6 for 8

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,19 +8,6 @@ matrix:
         apt:
           sources:
           - ubuntu-toolchain-r-test
-          - llvm-toolchain-trusty-6.0
-          packages:
-          - clang-6.0
-          - libc++1
-          - libc++abi-dev
-      env:
-      - MATRIX_EVAL="CC=clang-6.0 && CXX=clang++-6.0"
-      
-    - os: linux
-      addons:
-        apt:
-          sources:
-          - ubuntu-toolchain-r-test
           - llvm-toolchain-trusty-7
           packages:
           - clang-7
@@ -30,6 +17,24 @@ matrix:
           - libc++abi-7-dev
       env:
       - MATRIX_EVAL="CC=clang-7 && CXX=clang++-7"
+
+    - os: linux
+      sudo: true
+      addons:
+        apt:
+          sources:
+          - ubuntu-toolchain-r-test
+          - llvm-toolchain-trusty-8
+          - sourceline: "http://apt.llvm.org/trusty/ llvm-toolchain-trusty-8 main"
+            key_url: "https://apt.llvm.org/llvm-snapshot.gpg.key"
+          packages:
+          - clang-8
+          - lldb-8
+          - lld-8
+          - libc++-8-dev
+          - libc++abi-8-dev
+      env:
+      - MATRIX_EVAL="CC=clang-8 && CXX=clang++-8"
         
     - os: linux
       addons:
