--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: debian:stretch
+      - image: ubuntu:latest
     steps:
       - checkout
       - run:
@@ -16,4 +16,4 @@ jobs:
           command: 'apt-get update && apt-get install -y gcc g++ && gcc -v'
       - run:
           name: Install CMAKE
-          command: 'apt-get update && sudo apt-get install -y cmake'
+          command: 'apt-get update && apt-get install -y cmake'
