--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,14 +6,22 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Greeting
-          command: echo Hello, world.
+          name: Install Packages
+          command: 'apt-get update && apt-get install -y gcc g++ cmake'
       - run:
-          name: Print the Current Time
-          command: date
+          name: Build
+          command 'mkdir build-circle && cd build-circle && cmake .. -DCMAKE_C_COMPILER=gcc -DCMAKE_CXX_COMPILER=g++ && make -j3'
+  test:
+    docker:
+      - image: ubuntu:latest
+    steps:
+      - checkout
       - run:
-          name: Installing GCC
-          command: 'apt-get update && apt-get install -y gcc g++ && gcc -v'
+          name: Install Packages
+          command: 'apt-get update && apt-get install -y gcc g++ cmake'
       - run:
-          name: Install CMAKE
-          command: 'apt-get update && apt-get install -y cmake'
+          name: Build
+          command 'mkdir build-circle && cd build-circle && cmake .. -DCMAKE_C_COMPILER=gcc -DCMAKE_CXX_COMPILER=g++ -DCMAKE_BUILD_TYPE=Debug -DSIMPLE_SOCKET_TEST=ON && make-j3'
+      - run:
+          name: Test
+          command './Simple-Socket-tester.run'
