--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,3 +25,10 @@ jobs:
       - run:
           name: Test
           command: './Simple-Socket-tester.run'
+
+workflows:
+  version: 2
+  build_and_test:
+    jobs:
+      - build
+      - test
