--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -13,11 +13,13 @@ install:
     - git submodule update --init --recursive
 
 before_build:
-    - cmake -G "Visual Studio 15 2017 Win64" .
+    - mkdir build-appveyor
+    - cd build-appveyor
+    - cmake .. -G "Visual Studio 15 2017 Win64"
 
 build:
   project: $(APPVEYOR_BUILD_FOLDER)\$(APPVEYOR_PROJECT_NAME).sln
 
 test_script:
-  - '%APPVEYOR_BUILD_FOLDER%\%CONFIGURATION%\tests.exe'
+  - '%APPVEYOR_BUILD_FOLDER%\%CONFIGURATION%\Simple-Socket-tester.exe'
   
