--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -18,7 +18,7 @@ before_build:
     - cmake .. -G "Visual Studio 15 2017 Win64"
 
 build:
-  project: $(APPVEYOR_BUILD_FOLDER)\$(APPVEYOR_PROJECT_NAME).sln
+  project: $(APPVEYOR_BUILD_FOLDER)\build-appveyor\$(APPVEYOR_PROJECT_NAME).sln
 
 test_script:
   - '%APPVEYOR_BUILD_FOLDER%\%CONFIGURATION%\Simple-Socket-tester.exe'
