--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -15,10 +15,10 @@ install:
 before_build:
     - mkdir build-appveyor
     - cd build-appveyor
-    - cmake .. -G "Visual Studio 15 2017 Win64"
+    - cmake .. -G "Visual Studio 15 2017 Win64" -DSIMPLE_SOCKET_TEST=ON
 
 build:
   project: $(APPVEYOR_BUILD_FOLDER)\build-appveyor\$(APPVEYOR_PROJECT_NAME).sln
 
 test_script:
-  - '& %APPVEYOR_BUILD_FOLDER%\build-appveyor\%CONFIGURATION%\Simple-Socket-tester.exe'
+  - '%APPVEYOR_BUILD_FOLDER%\build-appveyor\%CONFIGURATION%\Simple-Socket-tester.exe'
