--- a/.travis.yml
+++ b/.travis.yml
@@ -61,4 +61,4 @@ script:
 - make -j3
 - cmake .. -DCMAKE_C_COMPILER=$CC -DCMAKE_CXX_COMPILER=$CXX -DCMAKE_BUILD_TYPE=Debug -DSIMPLE_SOCKET_TEST=ON
 - make -j3
-- ./Simple-Socket-tester.run
+- make test
