--- a/.travis.yml
+++ b/.travis.yml
@@ -73,7 +73,7 @@ script:
 - make -j3
 - cmake .. -DCMAKE_C_COMPILER=$CC -DCMAKE_CXX_COMPILER=$CXX -DCMAKE_BUILD_TYPE=Debug -DSIMPLE_SOCKET_TEST=ON
 - make -j3
-- make test
+- ./Simple-Socket-tester.run
 
 after_success:
 - if [[ "$COVERALL" == "ON" ]]; then
