now running coverage test

--- a/.travis.yml
+++ b/.travis.yml
@@ -66,4 +66,11 @@ script:
 - ./Simple-Socket-tester.run
 
 after_success:
-- if [[ "$COVERALL" == "ON" ]]; then echo "Updating coverall"; gem install coveralls-lcov; coveralls-lcov build-travis/Simple-Socket-Coverage.info; fi;
+- if [[ "$COVERALL" == "ON" ]]; then
+    echo "Running coverage test...";
+    make Simple-Socket-Coverage;
+    echo $PWD;
+    gem install coveralls-lcov;
+    echo "Updating coverall.io";
+    coveralls-lcov build-travis/Simple-Socket-Coverage.info;
+  fi;
