--- a/.travis.yml
+++ b/.travis.yml
@@ -69,8 +69,7 @@ after_success:
 - if [[ "$COVERALL" == "ON" ]]; then
     echo "Running coverage test...";
     make Simple-Socket-Coverage;
-    echo $PWD;
     gem install coveralls-lcov;
     echo "Updating coverall.io";
-    coveralls-lcov build-travis/Simple-Socket-Coverage.info;
+    coveralls-lcov Simple-Socket-Coverage.info;
   fi;
