--- a/.travis.yml
+++ b/.travis.yml
@@ -7,18 +7,46 @@ jobs:
     - stage: "Build"
       script:
       - echo "Build stage"
+      
+      #
+      # Testing Phase
+      #
     - stage: "Test"
-      script:
-      - echo "Test stage"
-    - stage: "Coverage"
+      - os: osx
+        osx_image: xcode10
+    - os: osx
+      osx_image: xcode9.4
       env:
-      - COVERALL="ON"
+        - MATRIX_EVAL=""
       script:
-      - echo "Coverage stage"
+      - mkdir build-travis
+      - cd build-travis
+      - cmake .. -DCMAKE_C_COMPILER=$CC -DCMAKE_CXX_COMPILER=$CXX -DSIMPLE_SOCKET_TEST=ON
+      - make -j3
+      - ./Simple-Socket-tester.run
+      
+      #
+      # Coverage Phase
+      #
+    - stage: "Coverage"
+      - os: linux
+        addons:
+          apt:
+            sources:
+            - ubuntu-toolchain-r-test
+            packages:
+            - g++-7
+            - lcov
+      env:
+      - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
+      script:
+      - mkdir build-travis
+      - cd build-travis
+      - cmake .. -DCMAKE_C_COMPILER=$CC -DCMAKE_CXX_COMPILER=$CXX
+      - make Simple-Socket-Coverage
       after_success:
-      - if [[ "$COVERALL" == "ON" ]]; then
-          echo "privatee coverage...";
-        fi;
+      - gem install coveralls-lcov
+      - coveralls-lcov Simple-Socket-Coverage.info.cleaned
         
 before_install:
     - eval "${MATRIX_EVAL}"
