--- a/.travis.yml
+++ b/.travis.yml
@@ -7,29 +7,54 @@ if: branch = master
 before_install:
 - eval "${MATRIX_EVAL}"
 
-os:
-  - linux
-  - osx
+env:
+- MATRIX_EVAL=""
 
-jobs:
+matrix:
   include:
-    - stage: "Test"
-      osx_image: xcode10
-      osx_image: xcode9.4
+    - os: linux
       addons:
         apt:
           sources:
           - ubuntu-toolchain-r-test
+          - llvm-toolchain-trusty-7
           packages:
+          - clang-7
+          - lldb-7
+          - lld-7
+          - libc++-7-dev
+          - libc++abi-7-dev
       env:
-      - MATRIX_EVAL=""
-      script:
-      - mkdir build-travis
-      - cd build-travis
-      - cmake .. -DCMAKE_C_COMPILER=$CC -DCMAKE_CXX_COMPILER=$CXX -DSIMPLE_SOCKET_TEST=ON
-      - make -j3
-      - ./Simple-Socket-tester.run
-      
+      - MATRIX_EVAL="CC=clang-7 && CXX=clang++-7"
+
+    - os: linux
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-8
+      env:
+        - MATRIX_EVAL="CC=gcc-8 && CXX=g++-8"
+
+    - os: osx
+      osx_image: xcode10
+
+    - os: osx
+      osx_image: xcode9.4
+        
+script:
+- mkdir build-travis
+- cd build-travis
+- cmake .. -DCMAKE_C_COMPILER=$CC -DCMAKE_CXX_COMPILER=$CXX
+- make -j3
+- cmake .. -DCMAKE_C_COMPILER=$CC -DCMAKE_CXX_COMPILER=$CXX -DCMAKE_BUILD_TYPE=Debug -DSIMPLE_SOCKET_TEST=ON
+- make -j3
+- ./Simple-Socket-tester.run
+
+
+jobs:
+  include:      
     - stage: "Coverage"
       addons:
         apt:
@@ -43,7 +68,7 @@ jobs:
       script:
       - mkdir build-travis
       - cd build-travis
-      - cmake .. -DCMAKE_C_COMPILER=$CC -DCMAKE_CXX_COMPILER=$CXX
+      - cmake .. -DCMAKE_C_COMPILER=$CC -DCMAKE_CXX_COMPILER=$CXX -DSIMPLE_SOCKET_TEST=ON
       - make Simple-Socket-Coverage
       after_success:
       - gem install coveralls-lcov
