--- a/.travis.yml
+++ b/.travis.yml
@@ -42,19 +42,19 @@ matrix:
 
     - os: osx
       osx_image: xcode9.4
-        
-script:
-- mkdir build-travis
-- cd build-travis
-- cmake .. -DCMAKE_C_COMPILER=$CC -DCMAKE_CXX_COMPILER=$CXX
-- make -j3
-- cmake .. -DCMAKE_C_COMPILER=$CC -DCMAKE_CXX_COMPILER=$CXX -DCMAKE_BUILD_TYPE=Debug -DSIMPLE_SOCKET_TEST=ON
-- make -j3
-- ./Simple-Socket-tester.run
-
 
 jobs:
-  include:      
+  include:
+    - stage: "Test"
+      script:
+      - mkdir build-travis
+      - cd build-travis
+      - cmake .. -DCMAKE_C_COMPILER=$CC -DCMAKE_CXX_COMPILER=$CXX
+      - make -j3
+      - cmake .. -DCMAKE_C_COMPILER=$CC -DCMAKE_CXX_COMPILER=$CXX -DCMAKE_BUILD_TYPE=Debug -DSIMPLE_SOCKET_TEST=ON
+      - make -j3
+      - ./Simple-Socket-tester.run
+
     - stage: "Coverage"
       addons:
         apt:
