--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,7 @@ if: branch = master
 before_install:
 - eval "${MATRIX_EVAL}"
 
-env:
-- MATRIX_EVAL=""
-
+matrix:
 - os: linux
   addons:
     apt:
@@ -37,9 +35,13 @@ env:
 
 - os: osx
   osx_image: xcode10
+  env:
+  - MATRIX_EVAL=""
 
 - os: osx
   osx_image: xcode9.4
+  env:
+  - MATRIX_EVAL=""
 
 jobs:
   include:
